--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   },
   "homepage": "https://github.com/aneslin/team-profile-generator#readme",
   "dependencies": {
+    "eslint-plugin-jest": "^26.0.0",
     "inquirer": "^8.2.0",
     "jest": "^27.4.7"
+  },
+  "devDependencies": {
+    "eslint": "^8.8.0"
   }
 }
